--- a/lista-impressoras.html
+++ b/lista-impressoras.html
@@ -32,19 +32,29 @@
     </div>
   </div>
 
-  <table>
+  <div style="margin: 20px 0;">
+  <strong>Total geral:</strong> <span id="totalGeral">0</span> |
+  <strong>Total filtrado:</strong> <span id="totalFiltrado">0</span>
+
+  <input type="text" id="filtroEscola" placeholder="Filtrar por Escola" style="margin-left: 20px;">
+  <input type="text" id="filtroToner" placeholder="Filtrar por Toner" style="margin-left: 10px;">
+</div>
+
+<table class="tabela">
     <thead>
-      <tr>
-        <th>Modelo</th>
-        <th>Toner</th>
-        <th>Escola</th>
-        <th>Propriedade</th>
-        <th>Cadastro</th>
-        <th>Ações</th>
-      </tr>
+        <tr>
+            <th>Modelo</th>
+            <th>Toner</th>
+            <th>Escola</th>
+            <th>Propriedade</th>
+            <th>Cadastro</th>
+            <th>Ações</th>
+        </tr>
     </thead>
-    <tbody id="lista"></tbody>
-  </table>
+
+    <!-- ✅ A lista será renderizada aqui -->
+    <tbody id="listaImpressoras"></tbody>
+</table>
 
 </main>
 
