--- a/relatorios.html
+++ b/relatorios.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Relatório de Trocas</title>
 <link rel="stylesheet" href="styles.css">
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 </head>
 <body>
 
@@ -18,23 +20,34 @@
   </nav>
 </header>
 
-<main>
+<main class="container">
 
-  <p class="muted">Listando todas as trocas registradas.</p>
+  <div style="margin-bottom:12px; display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
+    <div class="muted">Listando todas as trocas registradas (coleção <code>registros</code>).</div>
+    <div style="margin-left:auto; display:flex; gap:8px;">
+      <!-- filtro por escola (opção 1) -->
+      <input id="filtroEscolaRel" class="search" placeholder="Filtrar por Escola">
+      <button id="btnLimparFiltrosRel" class="small">Limpar</button>
+    </div>
+  </div>
 
-  <table class="tabela">
-    <thead>
-      <tr>
-        <th>Escola</th>
-        <th>Toner / Modelo</th>
-        <th>Qtd</th>
-        <th>Data</th>
-        <th>Responsável</th>
-        <th>Obs.</th>
-      </tr>
-    </thead>
-    <tbody id="tabelaRel"><tr><td colspan="6">Carregando...</td></tr></tbody>
-  </table>
+  <div class="table-wrapper">
+    <table class="tabela">
+      <thead>
+        <tr>
+          <th>Data</th>
+          <th>Escola</th>
+          <th>Toner / Tipo</th>
+          <th>Modelo — Escola</th>
+          <th>Quantidade</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody id="tabelaRel">
+        <tr><td colspan="6" class="muted">Carregando...</td></tr>
+      </tbody>
+    </table>
+  </div>
 
 </main>
 
