--- a/lista-impressoras.html
+++ b/lista-impressoras.html
@@ -11,15 +11,18 @@
 </head>
 <body>
 
-<header>
-  <h1>Lista de Impressoras</h1>
-  <nav>
-    <a href="index.html">Cadastro</a>
-    <a class="active" href="lista-impressoras.html">Impressoras</a>
-    <a href="cadastro-troca.html">Registrar Troca</a>
-    <a href="relatorios.html">Relatórios</a>
-  </nav>
+  <header class="header">
+  <div class="header-inner">
+    <h1>Lista de Impressoras</h1>
+    <nav>
+      <a href="index.html">Cadastro</a>
+      <a class="active" href="lista-impressoras.html">Impressoras</a>
+      <a href="cadastro-troca.html">Registrar Troca</a>
+      <a href="relatorios.html">Relatórios</a>
+    </nav>
+  </div>
 </header>
+
 
 <main class="container">
 
