--- a/cadastro-troca.html
+++ b/cadastro-troca.html
@@ -6,10 +6,8 @@
 <title>Cadastro Troca</title>
 
 <link rel="stylesheet" href="styles.css">
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.8.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.8.0/firebase-firestore.js"></script>
 
 <style>
 .form-grid {
@@ -23,6 +21,10 @@
   padding: 18px;
   border-radius: 12px;
   box-shadow: 0 6px 18px rgba(15,23,42,0.06);
+}
+.tabela th, 
+.tabela td {
+  text-align: center;
 }
 </style>
 
@@ -80,6 +82,7 @@
         <button type="submit">Registrar ✅</button>
         <button type="button" id="btnLimparToner" class="small">Limpar</button>
       </div>
+
     </form>
   </div>
 
@@ -92,10 +95,11 @@
           <th>Escola</th>
           <th>Toner</th>
           <th>Qtd</th>
+          <th>Quem Fez</th>
         </tr>
       </thead>
       <tbody id="tabelaUltimasTrocas">
-        <tr><td colspan="4" class="muted">Nenhuma troca ainda...</td></tr>
+        <tr><td colspan="5" class="muted">Nenhuma troca ainda...</td></tr>
       </tbody>
     </table>
   </div>
